organizer/node-server.yml
apiVersion: v1
kind: Service
metadata:
  name: organizer-server
spec:
  selector:
    app: organizer-server
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organizer-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: organizer-server
  template:
    metadata:
      labels:
        app: organizer-server
    spec:
      containers:
        - name: organizer-server
          image: zago0/organizer-server:1.2
          ports:
            - containerPort: 3000
