organizer/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-organizer-server-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: organizer.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: organizer-server
                port:
                  number: 80
